--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
     "@babel/core": "^7.5.5",
-    "@rails/webpacker": "5.3.0",
+    "@rails/webpacker": "^5.4.0",
     "actiontext": "https://github.com/rails/actiontext#archive",
     "babel-cli": "^6.26.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
